--- a/OldiOS/OldiOS.Shared/Apps/Settings/SettingsApp.razor
+++ b/OldiOS/OldiOS.Shared/Apps/Settings/SettingsApp.razor
@@ -8,38 +8,32 @@
             <div class="navigation-view-content">
                 <UITableView Grouped="true">
                     <UITableViewSection>
-                        <UITableViewCell Text="Airplane Mode" ShowToggle="true" ToggleValue="false" Icon="images/icons/settings/airplane.png" />
-                        <UITableViewCell Text="Wi-Fi" Detail="Not Connected" ShowDisclosure="true" Icon="images/icons/settings/wifi.png" />
-                        <UITableViewCell Text="Bluetooth" Detail="Off" ShowDisclosure="true" Icon="images/icons/settings/bluetooth.png" />
-                        <UITableViewCell Text="Cellular" ShowDisclosure="true" Icon="images/icons/settings/cellular.png" IsLast="true" />
+                        <UITableViewCell Text="Airplane Mode" ShowToggle="true" ToggleValue="false" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/Settings-Air@2x.png" />
+                        <UITableViewCell Text="Wi-Fi" Detail="Not Connected" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/airport@2x.png" />
+                        <UITableViewCell Text="Notifications" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/notifications_icon@2x.png" />
+                        <UITableViewCell Text="Location Services" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/Location@2x.png" IsLast="true" />
                     </UITableViewSection>
                     
                     <UITableViewSection>
-                        <UITableViewCell Text="Notifications" ShowDisclosure="true" Icon="images/icons/settings/notifications.png" />
-                        <UITableViewCell Text="Control Center" ShowDisclosure="true" Icon="images/icons/settings/controlcenter.png" />
-                        <UITableViewCell Text="Do Not Disturb" ShowDisclosure="true" Icon="images/icons/settings/dnd.png" IsLast="true" />
+                        <UITableViewCell Text="Sounds" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/Settings-Sound@2x.png" />
+                        <UITableViewCell Text="Brightness" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/Settings-Display@2x.png" />
+                        <UITableViewCell Text="Wallpaper" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/wallpaper@2x.png" IsLast="true" />
                     </UITableViewSection>
                     
                     <UITableViewSection>
-                        <UITableViewCell Text="General" ShowDisclosure="true" Icon="images/icons/settings/general.png" OnClick="@(() => GoToGeneral())" />
-                        <UITableViewCell Text="Sounds" ShowDisclosure="true" Icon="images/icons/settings/sounds.png" />
-                        <UITableViewCell Text="Brightness & Wallpaper" ShowDisclosure="true" Icon="images/icons/settings/brightness.png" />
-                        <UITableViewCell Text="Privacy" ShowDisclosure="true" Icon="images/icons/settings/privacy.png" IsLast="true" />
-                    </UITableViewSection>
-                    
-                    <UITableViewSection>
-                        <UITableViewCell Text="iCloud" ShowDisclosure="true" Icon="images/icons/settings/icloud.png" />
-                        <UITableViewCell Text="Mail, Contacts, Calendars" ShowDisclosure="true" Icon="images/icons/settings/mail.png" />
-                        <UITableViewCell Text="Notes" ShowDisclosure="true" Icon="images/icons/settings/notes.png" />
-                        <UITableViewCell Text="Reminders" ShowDisclosure="true" Icon="images/icons/settings/reminders.png" />
-                        <UITableViewCell Text="Phone" ShowDisclosure="true" Icon="images/icons/settings/phone.png" />
-                        <UITableViewCell Text="Messages" ShowDisclosure="true" Icon="images/icons/settings/messages.png" />
-                        <UITableViewCell Text="FaceTime" ShowDisclosure="true" Icon="images/icons/settings/facetime.png" />
-                        <UITableViewCell Text="Maps" ShowDisclosure="true" Icon="images/icons/settings/maps.png" />
-                        <UITableViewCell Text="Safari" ShowDisclosure="true" Icon="images/icons/settings/safari.png" />
-                        <UITableViewCell Text="Music" ShowDisclosure="true" Icon="images/icons/settings/music.png" />
-                        <UITableViewCell Text="Videos" ShowDisclosure="true" Icon="images/icons/settings/videos.png" />
-                        <UITableViewCell Text="Photos & Camera" ShowDisclosure="true" Icon="images/icons/settings/photos.png" IsLast="true" />
+                        <UITableViewCell Text="General" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/Settings@2x.png" OnClick="@(() => GoToGeneral())" />
+                        <UITableViewCell Text="iCloud" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/cloud@2x.png" />
+                        <UITableViewCell Text="Mail, Contacts, Calendars" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/mmc@2x.png" />
+                        <UITableViewCell Text="Twitter" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/twitter@2x.png" />
+                        <UITableViewCell Text="Phone" Detail="No SIM" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/phone@2x.png" />
+                        <UITableViewCell Text="FaceTime" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/vc@2x.png" />
+                        <UITableViewCell Text="Safari" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/safari@2x.png" />
+                        <UITableViewCell Text="Messages" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/sms@2x.png" />
+                        <UITableViewCell Text="Music" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/music@2x.png" />
+                        <UITableViewCell Text="Videos" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/video@2x.png" />
+                        <UITableViewCell Text="Photos" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/photos@2x.png" />
+                        <UITableViewCell Text="Notes" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/notes@2x.png" />
+                        <UITableViewCell Text="Store" ShowDisclosure="true" Icon="/_content/OldiOS.Shared/images/Applications/Preferences/AppStore@2x.png" IsLast="true" />
                     </UITableViewSection>
                 </UITableView>
             </div>
