--- a/OldiOS/OldiOS.Shared/System/StatusBar.razor.css
+++ b/OldiOS/OldiOS.Shared/System/StatusBar.razor.css
@@ -101,11 +101,21 @@
 .battery-fill {
     /* This is the inner fill element */
     position: absolute;
-    top: 2px; /* Adjust to fit inside the frame */
-    left: 4px; /* Adjust to fit inside the frame */
-    height: calc(100% - 4px); /* Adjust to fit inside the frame */
+    top: 0px; /* Adjust to fit inside the frame */
+    left: 2px; /* Adjust to fit inside the frame */
+    height: 40px; /* calc(100% - 4px); */ /* Adjust to fit inside the frame */
     background-repeat: repeat-x;
     background-size: auto 100%;
+
+    border-style: solid;
+    border-width: 2px;
+    border-top-width: 0px;
+    border-bottom-width: 0px;
+    border-image-slice: 0 2 0 2 fill;
+    border-image-repeat: stretch;
+}
+.status-bar-white-on-black-etch .battery-fill {
+    left: 4px; 
 }
 
 /* Optimize image rendering for icons */
