--- a/OldiOS/OldiOS.Shared/Apps/UIKit/UITableViewCell.razor
+++ b/OldiOS/OldiOS.Shared/Apps/UIKit/UITableViewCell.razor
@@ -19,7 +19,7 @@
     
     @if (ShowDisclosure)
     {
-        <div class="cell-accessory disclosure">›</div>
+        <div class="cell-accessory disclosure"></div>
     }
     else if (ShowCheckmark)
     {
