--- a/OldiOS/OldiOS.Shared/Apps/UIKit/UITableViewCell.razor.css
+++ b/OldiOS/OldiOS.Shared/Apps/UIKit/UITableViewCell.razor.css
@@ -9,7 +9,7 @@
     background-color: #F5F5F5;
     cursor: pointer;
     min-height: 88px;
-    transition: background-color 0.1s ease;
+    /* transition: background-color 0.1s ease; */
 }
 
 .uitableviewcell:first-child {
@@ -21,7 +21,10 @@
 }
 
 .uitableviewcell:active {
-    background-color: #d0d3d9;
+    /* background-color: #d0d3d9; */
+    background-image: url(/_content/OldiOS.Shared/images/uikit/UITableSelection@2x.png);
+    background-size: 2px 86px;
+    background-repeat: repeat-x;
 }
 
 .cell-icon {
@@ -47,6 +50,9 @@
     font-weight: bold;
     flex-grow: 1;
 }
+.uitableviewcell:active .cell-text {
+        color: white;
+}
 
 .cell-detail {
     color: #4c5c6c;
@@ -61,8 +67,9 @@
 }
 
 .cell-accessory.disclosure {
-    color: #b4b8bd;
-    font-size: 24px;
+    width: 20px;
+    height: 26px;
+    background-image: url(/_content/OldiOS.Shared/images/uikit/UITableNext@2x.png);
 }
 
 .cell-accessory.checkmark {
