--- a/OldiOS/OldiOS.Shared/wwwroot/css/app.css
+++ b/OldiOS/OldiOS.Shared/wwwroot/css/app.css
@@ -52,12 +52,35 @@ html, body {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction:column;
 }
 
-/* Apple logo in center */
+/* Apple logo in centre a bit upwards */
 .boot-apple-logo {
-    width: 80px;
-    height: 80px;
+    position: absolute;
+    top: 315px;
+    width: 142px;
+    height: 168px;
+}
+
+.loading-bar-container {
+    position: absolute;
+    bottom: 350px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 340px;
+    height: 24px;
+    border-radius: 24px;
+    border: 4px solid white;
+    overflow: hidden;
+}
+
+.loading-bar {
+    width: calc(var(--blazor-load-percentage, 0%) * 1); /* Use blazor-load-percentage to drive width */
+    height: 100%;
+    background-color: white;
+    border-radius: 2px;
+    transition: width 0.1s linear;
 }
 
 /* Home button (matching home-button from Index.razor.css) */
