--- a/OldiOS/OldiOS.Shared/Apps/Settings/AboutSettings.razor
+++ b/OldiOS/OldiOS.Shared/Apps/Settings/AboutSettings.razor
@@ -7,18 +7,31 @@
         <UITableView Grouped="true">
             <UITableViewSection>
                 <UITableViewCell Text="Name" Detail="@deviceName" ShowDisclosure="true" />
-                <UITableViewCell Text="Software Version" Detail="iOS 5.1.1" ShowDisclosure="true" />
-                <UITableViewCell Text="Carrier" Detail="No SIM" />
-                <UITableViewCell Text="Model" Detail="iPhone 4" />
+            </UITableViewSection>
+
+            <UITableViewSection>
+                <UITableViewCell Text="Network" Detail="Not Available" />
+                <UITableViewCell Text="Songs" Detail="0" />
+                <UITableViewCell Text="Videos" Detail="0" />
+                <UITableViewCell Text="Photos" Detail="0" />
+                <UITableViewCell Text="Applications" Detail="0" />
+                <UITableViewCell Text="Capacity" Detail="12.9 GB" />
+                <UITableViewCell Text="Available" Detail="11.5 GB" />
+                <UITableViewCell Text="Version" Detail="5.1.1 (9B206)"/>
+                <UITableViewCell Text="Carrier" Detail="Not Available" />
+                <UITableViewCell Text="Model" Detail="MD234X" />
                 <UITableViewCell Text="Serial Number" Detail="DLXK12345678" />
                 <UITableViewCell Text="Wi-Fi Address" Detail="00:00:00:00:00:00" />
-                <UITableViewCell Text="Bluetooth" Detail="00:00:00:00:00:00" IsLast="true" />
+                <UITableViewCell Text="Bluetooth" Detail="00:00:00:00:00:00" />
+                <UITableViewCell Text="IMEI" Detail="00 000000 000000 0" />
+                <UITableViewCell Text="Modem Firmware" Detail="0.0.00" />
             </UITableViewSection>
             
-            <UITableViewSection Header="LEGAL">
+            <UITableViewSection>
+                <UITableViewCell Text="Diagnostics & Usage" ShowDisclosure="true" />
+                <UITableViewCell Text="Legal Notices" ShowDisclosure="true" />
                 <UITableViewCell Text="Regulatory" ShowDisclosure="true" />
                 <UITableViewCell Text="License" ShowDisclosure="true" />
-                <UITableViewCell Text="Warranty" ShowDisclosure="true" IsLast="true" />
             </UITableViewSection>
         </UITableView>
     </div>
