--- a/OldiOS/OldiOS.Shared/Apps/UIKit/UISwitch.razor
+++ b/OldiOS/OldiOS.Shared/Apps/UIKit/UISwitch.razor
@@ -6,6 +6,7 @@
            disabled="@Disabled"
            @onchange="HandleChange" />
     <span class="switch-slider">
+        <span class="switch-slider-inner"></span>
         <span class="slider-knob"></span>
     </span>
 </label>
