--- a/OldiOS/OldiOS.Shared/Apps/UIKit/UISwitch.razor.css
+++ b/OldiOS/OldiOS.Shared/Apps/UIKit/UISwitch.razor.css
@@ -41,8 +41,28 @@
     right: 0;
     bottom: 0;
     background-color: #EEEEEE;
+    width: 254px; /* 154px (visible) + 100px for sliding */
+    height: 54px;
     transition: .3s;
     border-radius: 56px;
+    transform: translateX(-100px); /* Start with OFF state visible */
+}
+
+.switch-slider-inner {
+    position: absolute;
+    top: 0;
+    left: 0; /* Positioned for the ON state */
+    width: 129px; /* Width of the ON part */
+    height: 54px;
+    background: linear-gradient( to right, #007FEA, #007FEA 96%, rgba(0,0,0,0) 100%);
+    /*    background: #007FEA;*/
+    z-index: 0;
+    opacity: 0;
+    transition: opacity 0.04s 0.3s;
+}
+input:checked + .switch-slider .switch-slider-inner {
+    opacity: 1;
+    transition-delay: 0s;
 }
 
 /* OFF text */
@@ -57,7 +77,7 @@
     font-size: 32px;
     font-weight: bold;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-    transition: opacity 0.3s;
+    z-index: 1;
 }
 
 /* ON text */
@@ -72,8 +92,6 @@
     font-size: 32px;
     font-weight: bold;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
-    opacity: 0;
-    transition: opacity 0.3s;
     z-index: 1;
 }
 
@@ -82,30 +100,18 @@
     position: absolute;
     height: 54px;
     width: 58px;
-    left: -2px;
+    left: 98px; /* Positioned for the OFF state */
     top: 0px;
     transition: .3s; 
     background-image: url(images/uikit/UISwitch_thumb.png);
     z-index: 10;
 }
-    .slider-knob:active {
-        background-image: url(images/uikit/UISwitch_thumb_pressed.png);
-    }
+input:active + .switch-slider .slider-knob {
+    background-image: url(images/uikit/UISwitch_thumb_pressed.png);
+}
 
 input:checked + .switch-slider {
-    background: #007FEA;
-}
-
-input:checked + .switch-slider:before {
-    opacity: 1;
-}
-
-input:checked + .switch-slider:after {
-    opacity: 0;
-}
-
-input:checked + .switch-slider .slider-knob {
-    transform: translateX(100px);
+    transform: translateX(0);
 }
 
 input:disabled + .switch-slider {
