--- a/OldiOS/OldiOS.Shared/Apps/Settings/SettingsApp.razor
+++ b/OldiOS/OldiOS.Shared/Apps/Settings/SettingsApp.razor
@@ -8,7 +8,7 @@
             <div class="navigation-view-content">
                 <UITableView Grouped="true">
                     <UITableViewSection>
-                        <UITableViewCell Text="Airplane Mode" ShowToggle="true" ToggleValue="false" Icon="_content/OldiOS.Shared/images/Applications/Preferences/Settings-Air@2x.png" />
+                        <UITableViewCell Text="Airplane Mode" ShowToggle="true" ToggleValue="false" Icon="_content/OldiOS.Shared/images/Applications/Preferences/Settings-Air@2x.png" ToggleOnTrackColor="#FF8000" />
                         <UITableViewCell Text="Wi-Fi" Detail="Not Connected" ShowDisclosure="true" Icon="_content/OldiOS.Shared/images/Applications/Preferences/airport@2x.png" />
                         <UITableViewCell Text="Notifications" ShowDisclosure="true" Icon="_content/OldiOS.Shared/images/Applications/Preferences/notifications_icon@2x.png" />
                         <UITableViewCell Text="Location Services" ShowDisclosure="true" Icon="_content/OldiOS.Shared/images/Applications/Preferences/Location@2x.png" IsLast="true" />
